202502090
Sarsat : verrouillage ecran sur detection crc2 au lieu de crc1
Sarsat : alarme sonore USB (RP2040) sur detection trame crc2 OK

202406160
Suppression RPI remote

202406150
Reglage Date et Heure Sarsat

202404010
Ajout Lock Sarsat

202312310
Detection carte audio

202312060
RTL presets et detection carte son pour volume

202312010
Ajout modes numeriques rtl_fm

202311240
Correction detection carte audio

202310070
Installation logiciel hotspot
Sarsat suppression scan

202309220
Correction Audio TX Auto
Kill Web update

202309110
Streaming audio correction lancement multiple

202309020
Activation service dnsmasq pour le hotspot

202308250
Ajout fréquence fixe 434.2MHz Décodeur Sarsat

202306160
Correction Streaming audio

202306150
Streaming audio web Sarsat et RTL_FM (source: https://github.com/JoJoBond/3LAS)

202306101
Correction carte son decodeur sarsat
mise à jour rtl-sdr

202306100
RTSP camera
Audio decodeur sarsat

202301110
Correct RTL-SDR Bandviewer Span width
Allow basic RTL-SDR Bandviewer with Waveshare Screen

202212110
Pin VLC to use RPi archive version
Update Buster Legacy Version for new builds

202212040
Amélioration transpondeur DVB-S

202210180
Dev Update f4dvk

202207170
Add RTL-SDR and Airspy versions of Bandviewer

202207140
Remove hold on VLC and update to latest version which works with Portsdown

202206220
Roll back and hold VLC to version 3.0.12

202206050
Ajout VLC RX Leandvb
FastLock OFF si DVB-S2

202203110
web control résolution fenêtre automatique

202203060
Correction nom de domaine

202203050
Prise en charge partielle écran 3.5 pouces Web Control

202203031
Visualisation Sarsat Decoder Web Access

202203030
Visualisation RX Web Access

202202260
Initial implementation of Web Access

202111110
Infos leandvb Forward

202111061
Correction bug transpondeur DATV

202111060
Ajout DVB-S2 transpondeur (Forward) (Avec RTL en RX et Lime en TX)

202111011
Ajout SR 92 en TX

202111010
Amélioration détection perte verrouillage DVB-S2
